<resources>
    <string name="app_name">Count my Job</string>
    <string name="ok">ok</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_description">Введите доп. информацию</string>
    <string name="description">Дополнительно</string>
    <string name="name">Имя</string>
    <string name="close">Закрыть</string>
    <string name="is_done">Завершено</string>
    <string name="enter_time">введите время</string>
    <string name="enter_salary">введите сумму</string>
    <string name="date">Дата</string>
    <string name="choose_date">выберите дату</string>
    <string name="employer">Работодатель</string>
    <string name="hours">Часы</string>
    <string name="salary">Деньги</string>
    <string name="minus">-</string>
    <string name="interval">Период</string>
    <string name="for_one_hour">за 1 час</string>
</resources>
